# C-Cpp

./: .gitignore  README.md  testing.txt
CMake/: CMakeLists.txt  Hellow.cpp
JunkCode/: 17mcpp.cpp  Aug20.c  GradeInCpp.cpp  add3.c  cicleCalculator.c  cpp10.cpp  cpp18.cpp  cpp19.cpp  cpp2.cpp  cpp20.cpp  cpp28.cpp  cpp3.cpp  cpp32.cpp  cpp33.cpp  cpp37.cpp  cpp39.cpp  cpp4.cpp  cpp40.cpp  cpp41.cpp  cpp42.cpp  cpp43.cpp  cpp44.cpp  cpp47.cpp  cpp48.cpp  cpp5.cpp  cpp50.cpp  cpp51.cpp  cpp52.cpp  cpp53.cpp  cpp56.cpp  cpp57.cpp  cpp58.cpp  cpp59.cpp  cpp6.cpp  cpp60.cpp  cpp7.cpp  cpp8.cpp  cppMap.cpp  diamond.cpp  digitalclock.c  (+18 more)
JunkCode/LearningProject/: Program.cs
project/ImageViewer/: CMakeLists.txt  README.md  image.ppm  src.c
project/kernelCpp/: CMakeLists.txt
project/kernelCpp/src/: main.cpp
src/: README.md  calloc.c  cuda1.cu  digitalclock.c  hellowordCuda.cu  main.c  main.cpp  shoppingcart.c  sqrt.cpp
